# TheOffice.AI

./: .browse-folder.ps1  .gitignore  .test-browse.ps1  AGENTS.md  README.md  agentExport.js  agentPackage.js  apply-update.js  azdo.js  capabilities.js  chains.js  cli.js  config-sync.js  connect.js  data-paths.js  db.js  dependencies.js  devitems.js  event-listener.js  forge.js  github.js  hash-tree.js  install-service.js  launch-hidden.vbs  manager.js  marketplace-design.js  marketplace.js  mcpTest.js  mobile-handler.js  mojibake.js  package-lock.json  package.json  restart.cmd  scheduler.js  sdk-reader.js  sdk-runner.js  server.js  service-restart.cmd  service-start.cmd  service-stop.cmd  (+9 more)
.github/workflows/: release.yml
builtin-plugins/board/: plugin.json
builtin-plugins/connect/: plugin.json
builtin-plugins/manager/: response-format.md
daemon/: copilotagentsupervisor.xml
desktop/: .gitignore  DEPENDENCIES.md  README.md  generate-icon.js  package-lock.json  package.json
desktop/scripts/: build-delta.mjs  install-prerequisites.ps1  set-version.mjs  stage-sidecar.mjs  stop-instances.ps1
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/nsis/: hooks.nsh
desktop/src-tauri/src/: main.rs
experiments/marketplace-spike/: package-run-spike.cjs  (+2 more)
mcp-configs/: waittime-watcher.mcp.json
public/: app.html  icon-palettes.html  icon-themes.html
relay/: package.json  server.js
tests/: board-jumble.regression.mjs  board-layout.regression.mjs  board-multiclient.regression.mjs  board-ux.regression.mjs
(+58 files in other folders)
