[package]
name = "theoffice-desktop"
version = "1.0.2"
description = "Tauri desktop shell for TheOffice.AI"
authors = ["TheOffice.AI"]
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
